[package]
name = "serust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serialport = {git = "https://github.com/LukaOber/serialport-rs", branch = "pr/34"} # currenly the only branch which works on windows
